k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: rds-jenkins-service

  labels:
    app: rds-jenkins

spec:
  type: ClusterIP

  selector:
    app: rds-jenkins

  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
